# trimmix

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
tests/: test_detector.py  test_transformer.py
trimmix/: __init__.py  __main__.py  clipboard.py  daemon.py  detector.py  paste.py  transformer.py
